src/snapshots/blog__snapshot@2014__12__12__1.0-Timeline.html.snap
---
source: src/lib.rs
expression: content
input_file: site/2014/12/12/1.0-Timeline.html
snapshot_kind: text
---
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>Rust 1.0: Scheduling the trains | Rust Blog</title>
    <meta name="viewport" content="width=device-width,initial-scale=1.0">
<meta name="description" content="Empowering everyone to build reliable and efficient software.">
     <!-- Twitter card -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@rustlang">
     <meta name="twitter:creator" content="@rustlang">
     <meta name="twitter:title" content="Rust 1.0: Scheduling the trains | Rust Blog">
     <meta name="twitter:description" content="Empowering everyone to build reliable and efficient software.">
    <meta name="twitter:image" content="https://www.rust-lang.org/static/images/rust-social.jpg">
    
    <!-- Facebook OpenGraph -->
    <meta property="og:title" content="Rust 1.0: Scheduling the trains | Rust Blog" />
    <meta property="og:description" content="Empowering everyone to build reliable and efficient software.">
    <meta property="og:image" content="https://www.rust-lang.org/static/images/rust-social-wide.jpg" />
    <meta property="og:type" content="website" />
    <meta property="og:locale" content="en_US" />
    
    <!-- styles -->
    <link rel="stylesheet" href="../../../styles/vendor.css"/>
    <link rel="stylesheet" href="../../../styles/fonts.css"/>
    <link rel="stylesheet" href="../../../styles/app.css"/>
    <link rel="stylesheet" href="../../../styles/highlight.css"/>
    
    <!-- stylesheet for user agents without js -->
    <noscript>
        <link rel="stylesheet" href="../../../styles/noscript.css">
    </noscript>
    
    <!-- favicon -->
    <link rel="apple-touch-icon" sizes="180x180" href="../../../images/apple-touch-icon.png">
    <link rel="icon" type="image/png" sizes="16x16" href="../../../images/favicon-16x16.png">
    <link rel="icon" type="image/png" sizes="32x32" href="../../../images/favicon-32x32.png">
    <link rel="icon" type="image/svg+xml" href="../../../images/favicon.svg">
    <link rel="manifest" href="../../../images/site.webmanifest">
    <link rel="mask-icon" href="../../../images/safari-pinned-tab.svg" color="#5bbad5">
    <meta name="msapplication-TileColor" content="#00aba9">
    <meta name="theme-color" content="#ffffff">
    
     <!-- atom -->
     <link type="application/atom+xml" rel="alternate" href="https://blog.rust-lang.org/feed.xml" title="Rust Blog" />
    
    <!-- theme switcher -->
    <script src="../../../scripts/theme-switch.js"></script>
  </head>
  <body>
    <nav class="flex flex-row justify-center justify-end-l items-center flex-wrap ph2 pl3-ns pr4-ns">
      <div class="brand flex-auto w-100 w-auto-l self-start tc tl-l">
        <a href="../../../">
          <img class="v-mid ml0-l rust-logo" alt="Rust Logo" src="../../../images/rust-logo-blk.svg">
          <span class="dib ml1 ml0-l">Rust Blog</span>
        </a>
      </div>
    
      <ul class="nav list w-100 w-auto-l flex flex-none flex-row flex-wrap justify-center justify-end-l items-center pv2 ph0 ph4-ns">
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org">Rust</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/tools/install">Install</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/learn">Learn</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/tools">Tools</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/governance">Governance</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/community">Community</a></li>
        <button class="theme-icon" onclick="dropdown();">🖌
          <ul id="theme-choice">
            <li class="theme-item" onclick="changeThemeTo('light');">Light</li>
            <li class="theme-item" onclick="changeThemeTo('dark');">Dark</li>
            <li class="theme-item" onclick="changeThemeTo('system');">System</li>
          </ul>
        </button>
        <script src="../../../scripts/theme-switch-post.js"></script>
      </ul>
    </nav>
<section id="Rust 1.0: Scheduling the trains" class="white">
  <div class="w-100 mw-none ph3 mw8-m mw8-l center f3">
    <header>
      <h2>Rust 1.0: Scheduling the trains</h2>
      <div class="highlight mt2 mb3"></div>
    </header>

    <div class="publish-date-author">Dec. 12, 2014 &middot; Aaron Turon
    
    </div>

    <div class="post">
      <p>As 2014 is drawing to a close, it's time to begin the Rust 1.0 release cycle!</p>
<p><strong>TL;DR: we will transition to a six week release cycle on Jan 9, 2015, and
produce Rust 1.0.0 final at least two cycles afterwards</strong>:</p>
<ul>
<li>Rust 1.0.0-alpha -- Friday, Jan 9, 2015</li>
<li>Rust 1.0.0-beta1 -- Week of Feb 16, 2015</li>
<li>Rust 1.0.0 -- One or more six-week cycles later</li>
</ul>
<p>We talked before about <a href="https://blog.rust-lang.org/2014/09/15/Rust-1.0.html">why Rust is reaching 1.0</a>, and also about the
<a href="https://blog.rust-lang.org/2014/10/30/Stability.html">6-week train model</a> (with Nightly, Beta, and Stable channels) that will enable
us to deliver stability without stagnation. This post finishes the story by
laying out the transition to this new release model and the stability guarantees
it provides.</p>
<h3><a href="#the-alpha-release" aria-hidden="true" class="anchor" id="the-alpha-release"></a>The alpha release</h3>
<p>Reaching alpha means three things:</p>
<ul>
<li>
<p>The language is feature-complete. All gates are removed from features we
expect to ship with 1.0.</p>
</li>
<li>
<p>The standard library is nearly feature-complete. The majority of APIs that
will ship in 1.0 stable will already be marked as <code>#[stable]</code>.</p>
</li>
<li>
<p><em>Warnings</em> for <code>#[unstable]</code> features are turned on by default. (Note that the
<code>#[experimental]</code> stability level is
<a href="https://github.com/rust-lang/rfcs/pull/507">going away</a>.)</p>
</li>
</ul>
<p>In other words, 1.0.0-alpha gives a pretty accurate picture of what 1.0 will
look like, but doesn't yet institute release channels. By turning on warnings
for unstable APIs but not excluding them altogether, we can get community
feedback about which important APIs still need to be stabilized without those
APIs simply disappearing over night.</p>
<p>While we expect the pace of breakage to slow dramatically when we reach
feature-complete status, <strong>1.0.0-alpha is still a <a href="https://semver.org/">pre-release</a></strong>:</p>
<pre><code>A pre-release version indicates that the version is unstable and might not
satisfy the intended compatibility requirements as denoted by its associated
normal version.
</code></pre>
<p>That is, we will reserve the right to make minor breaking changes to both the
language and libraries -- including <code>#[stable]</code> APIs -- throughout the duration
of the alpha cycle. But we expect any such changes to be relatively minor
tweaks, and changes to <code>#[stable]</code> APIs to be very rare.</p>
<h3><a href="#the-beta-releases" aria-hidden="true" class="anchor" id="the-beta-releases"></a>The beta release(s)</h3>
<p>Six weeks later, we will begin the beta period:</p>
<ul>
<li>
<p>Both the language and libraries are feature-complete. All APIs shipping for
Rust 1.0 are marked <code>#[stable]</code>.</p>
</li>
<li>
<p>Release channels take effect: feature gates and <code>#[unstable]</code> APIs are
available on nightly builds, but not on the beta. This change is part of
<a href="https://blog.rust-lang.org/2014/10/30/Stability.html">our commitment to stability</a>.</p>
</li>
</ul>
<p>Unlike the alpha cycle, where we still expect some minor breakage, the beta
cycle should <em>not</em> involve breakage unless a very significant problem is
found. Ideally, <strong>the beta cycle will be focused on testing, bugfixing, and
polish</strong>.</p>
<p>We plan to run at least one beta cycle before the final release.</p>
<h3><a href="#the-final-release" aria-hidden="true" class="anchor" id="the-final-release"></a>The final release</h3>
<p>Finally, after one or more beta cycles, we will have produced a release
candidate that is <strong>ready for the world</strong>:</p>
<ul>
<li>
<p>We are ready to promise stability --
<a href="https://blog.rust-lang.org/2014/10/30/Stability.html">hassle-free upgrades</a> --
for the duration of the 1.X series.</p>
</li>
<li>
<p>The core documentation (The Guide/Guides) is fully in sync with the language and
libraries.</p>
</li>
</ul>
<p>We are incredibly excited for Rust to reach this point.</p>
<h3><a href="#what-this-means-for-the-ecosystem" aria-hidden="true" class="anchor" id="what-this-means-for-the-ecosystem"></a>What this means for the ecosystem</h3>
<p>With the <a href="https://blog.rust-lang.org/2014/11/20/Cargo.html">launch</a> of Cargo and
<a href="https://crates.io/">crates.io</a>, Rust's ecosystem has already seen significant expansion, but
it still takes a lot of work to track Rust's nightly releases. Beginning with
the alpha release, and especially approaching beta1, this will change
dramatically; <strong>code that works with beta1 should work with 1.0 final without
any changes whatsoever</strong>.</p>
<p>This migration into stability should be a boon for library writers, and we hope
that by 1.0 final there will be a massive collection of crates ready for use on
the stable channel -- and ready for the droves of people trying out Rust for the
first time.</p>
<p>Let's do this!</p>

    </div>
  </div>
</section>
    <footer>
      <div class="w-100 mw-none ph3 mw8-m mw9-l center f3">
        <div class="row">
          <div class="four columns mt3 mt0-l" id="get-help">
            <h4>Get help!</h4>
            <ul>
              <li><a href="https://doc.rust-lang.org" target="_blank" rel="noopener">Documentation</a></li>
              <li><a href="mailto:core-team@rust-lang.org">Contact the Rust Team</a></li>
            </ul>
          </div>
          <div class="four columns mt3 mt0-l">
            <h4>Terms and policies</h4>
            <ul>
              <li><a href="https://www.rust-lang.org/policies/code-of-conduct">Code of Conduct</a></li>
              <li><a href="https://www.rust-lang.org/policies/licenses">Licenses</a></li>
              <li><a href="https://www.rust-lang.org/policies/media-guide">Logo Policy and Media Guide</a></li>
              <li><a href="https://www.rust-lang.org/policies/security">Security Disclosures</a></li>
              <li><a href="https://www.rust-lang.org/policies">All Policies</a></li>
            </ul>
          </div>
          <div class="four columns mt3 mt0-l">
            <h4>Social</h4>
            <div class="flex flex-row flex-wrap">
              <a rel="me" href="https://social.rust-lang.org/@rust" target="_blank" rel="noopener" alt="mastodon link"><img src="../../../images/mastodon.svg" alt="mastodon logo" title="Mastodon"/></a>
              <a href="https://twitter.com/rustlang" target="_blank" rel="noopener" alt="twitter link"><img src="../../../images/twitter.svg" alt="twitter logo" title="Twitter"/></a>
              <a href="https://www.youtube.com/channel/UCaYhcUwRBNscFNUKTjgPFiA" target="_blank" rel="noopener" alt="youtube link"><img style="padding-top: 6px; padding-bottom:6px" src="../../../images/youtube.svg" alt="youtube logo" title="YouTube"/></a>
              <a href="https://discord.gg/rust-lang" target="_blank" rel="noopener" alt="discord link"><img src="../../../images/discord.svg" alt="discord logo" title="Discord"/></a>
              <a href="https://github.com/rust-lang" target="_blank" rel="noopener" alt="github link"><img src="../../../images/github.svg" alt="github logo" title="GitHub"/></a>
            </div>
            <h4 class="mt4 mb3">RSS</h4>
            <ul>
              <li><a href="../../../feed.xml">Main Blog</a></li>
              <li><a href="../../../inside-rust/feed.xml">"Inside Rust" Blog</a></li>
            </ul>
          </div>
    
        </div>
        <div class="attribution">
          Maintained by the Rust Team. See a typo?
          <a href="https://github.com/rust-lang/blog.rust-lang.org" target="_blank" rel="noopener">Send a fix here</a>!
        </div>
      </div>
    </footer>
    
    <!-- scripts -->
    <script src="../../../scripts/highlight.js"></script>
  </body>
</html>
